@@ -28,3 +28,7 @@ b) Run the following commands to automatically get the latest version
 This will give you a bash prompt where you should execute './doall.sh'  or execute each of the 5 shell scripts.
 
 if all goes well, you will have generic iso and generic img in /usr/m0n0wall/build82/images/
+
+For the syslinux image, make a fat32 disk/usb and run syslinux to create the MBR and place syslinux.sys on the disk, 
+then copy memdisk from the syslinux files onto the root of the disk.  Now extract the m0n0wall tgz syslinux image onto the 
+root of the disk and boot.
