@@ -1,6 +1,10 @@
 critical areas
+	syslinux build needs rework for symlinks not being supported on FAT32 (mac os supports symlinks on fat32 and there is a patch 
+		for linux)  .htpasswd, config.xml , etc/hosts and /etc/resolv.conf are broken.  It may be ok to just use them without the symlink
+		as modern flash drives can handle a lot of r/w before 'wearing out'
 	
 areas to investigate impact
+	syslinux build maybe reduced a fraction if not boot kmods are moved out of kernel into chroot for kldload after init/rc
     lnc kernel driver is gone from 8.1 etc
 	DHCP relay cannot start when DHCP server is running (even on different interfaces)
 	javascript around RA's is broken (when RA is not enabled, other options should be disabled)
