@@ -1,0 +1,7 @@
+#!/bin/sh
+#
+# make ramdisk for /var
+/sbin/mdmfs -s 4m md2 /var 
+# now use standard m0n0wall rc
+/etc/rc
+exit 0
